# parseltongue-claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  run-server.sh
skills/adversarial-review/: SKILL.md
skills/parseltongue/: SKILL.md
skills/parseltongue-review/: SKILL.md
src/parseltongue_claude/: __init__.py  server.py
tests/: __init__.py  test_integration.py  test_server.py
